add logs page
